--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,68 @@
 /* General */
+:root {
+	--brown: #29271b;
+	--blue: #7ea4b9;
+	--accent: #539fe0;
+	--accent-dark: #407caf;
+}
+body {
+	font-family: 'Montserrat', sans-serif;
+}
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Montserrat', sans-serif;
+}
 /* End General */
 
+/* Navbar */
+header .navbar {
+	background: linear-gradient(to bottom, rgba(41,39,27,0.9), rgba(41,39,27,0));
+}
+header .navbar .nav-item .nav-link {
+	color: #fff;
+}
+.navbar .navbar-brand {
+	font-family: 'Russo One', sans-serif;
+	font-family: 'Orbitron', sans-serif;
+	letter-spacing: 2px;
+	border-top: 1px solid rgba(255,255,255,0.5);
+	border-bottom: 1px solid rgba(255,255,255,0.5);
+	background-color: rgba(0,0,0,0.5);
+	padding: 0 0.5rem;
+}
+/* Navbar */
+
 /* Header */
+header {
+	height: 100vh;
+	background: url(../img/main-bg-brown.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	color: #fff;
+}
+header .offer {
+	padding-top: 100px;
+}
+header .offer h1 {
+	font-weight: 300;
+	margin-bottom: 2rem;
+}
+header .offer p {
+	text-transform: uppercase;
+}
+header .offer p small {
+	display: block;
+	color: rgba(255,255,255,0.7);
+	text-transform: lowercase;
+}
+header .offer .btn {
+	color: #fff;
+	border-radius: 30px;
+	margin-top: 2rem;
+	background-color: var(--accent);
+	padding: 0.5rem 2rem;
+}
+header .offer .btn:hover {
+	background-color: var(--accent-dark);
+} 
 /* End Header */
