--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,11 @@ section, footer {
 /* Navbar */
 header .navbar {
 	background: linear-gradient(to bottom, rgba(41,39,27,0.9), rgba(41,39,27,0));
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 100;
 }
 header .navbar .nav-item .nav-link {
 	color: #fff;
@@ -45,19 +50,56 @@ header .navbar .nav-item .nav-link {
 	background-color: rgba(0,0,0,0.5);
 	padding: 0 0.5rem;
 }
+.navbar .navbar-text small {
+	display: block;
+}
+.navbar-dark .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+.navbar .navbar-toggler {
+	border: none;
+	outline: none;
+}
 /* Navbar */
+
+/* Media Navbar */
+@media (min-width: 768px) and (max-width: 991px) {
+	.navbar .navbar-collapse ul {
+		flex-direction: row;
+		justify-content: flex-end;
+	}
+	.navbar .navbar-collapse ul li {
+		margin-left: 1rem;
+	} 
+}
+@media (max-width: 560px) {
+	.navbar .navbar-brand {
+		font-size: 0.8rem;
+	}
+	.navbar .navbar-text small {
+		font-size: 60%;
+	}
+}
+@media (max-width: 440px) {
+	.navbar .navbar-text {
+		font-size: 0.8rem;
+	}
+}
+/* End Media Navbar */
 
 /* Header */
 header {
-	height: 100vh;
-	background: url(../img/main-bg-brown.jpg);
+	min-height: 100vh;
+	background-image: url(../img/main-bg-brown.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 	color: #fff;
+	position: relative;
+	padding-bottom: 5rem;
 }
 header .offer {
-	padding-top: 100px;
+	margin-top: 200px;
 }
 header .offer h1 {
 	font-weight: 300;
@@ -82,6 +124,20 @@ header .offer .btn:hover {
 	background-color: var(--accent-dark);
 } 
 /* End Header */
+
+/* Media Header */
+@media (min-width: 768px) and (max-width: 991px) {
+	header .offer {
+		margin-top: 150px;
+	}
+}
+@media (max-width: 767px) {
+	header {
+		background-image: url(../img/main-bg_car.jpg);
+		background-position: top center;
+	}
+}
+/* End Media Header */
 
 /* Who We */
 
