--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,9 @@ section, footer {
 /* End General */
 
 /* Navbar */
+.navbar {
+	background-color: var(--brown);
+}
 header .navbar {
 	background: linear-gradient(to bottom, rgba(41,39,27,0.9), rgba(41,39,27,0));
 	position: absolute;
@@ -41,12 +44,15 @@ header .navbar {
 header .navbar .nav-item .nav-link {
 	color: #fff;
 }
-.navbar .navbar-brand {
+header .navbar-brand {
+	background-color: rgba(0,0,0,0.5);
+}
+.navbar-brand {
 	font-family: 'Orbitron', sans-serif;
 	letter-spacing: 2px;
 	border-top: 1px solid rgba(255,255,255,0.5);
 	border-bottom: 1px solid rgba(255,255,255,0.5);
-	background-color: rgba(0,0,0,0.5);
+	
 	padding: 0 0.5rem;
 }
 .navbar .navbar-text small {
